# bn10-scraper

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: scrape.yaml
src/: captcha.py  main.py  result.py
